fix(www): ensure minimal changes to spacing on subpages

--- a/apps/www/app/_components/blog-card/blog-card.module.css
+++ b/apps/www/app/_components/blog-card/blog-card.module.css
@@ -16,7 +16,7 @@
   }
 }
 
-.heading {
+.heading:not(:first-child) {
   margin-block-start: var(--ds-size-4);
 }
 
@@ -28,7 +28,7 @@
 
 .meta {
   display: flex;
-  gap: var(--ds-size-3);
+  gap: 10px;
   color: var(--ds-color-neutral-text-subtle);
   font-size: 14px !important;
 }
